WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
180690
ASSERT(LayoutDisallowedScope::isLayoutAllowed()) whenever hitting Enter in Web Inspector console
https://bugs.webkit.org/show_bug.cgi?id=180690
Summary
ASSERT(LayoutDisallowedScope::isLayoutAllowed()) whenever hitting Enter in We...
alan
Reported
2017-12-11 22:02:35 PST
rdar://problem/35345162
Attachments
Patch
(7.79 KB, patch)
2017-12-11 22:06 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.88 KB, patch)
2017-12-13 08:36 PST
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(7.88 KB, patch)
2017-12-13 10:09 PST
,
alan
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-12-11 22:06:13 PST
Created
attachment 329089
[details]
Patch
alan
Comment 2
2017-12-13 08:36:25 PST
Created
attachment 329220
[details]
Patch
Simon Fraser (smfr)
Comment 3
2017-12-13 09:58:58 PST
Comment on
attachment 329220
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=329220&action=review
> Source/WebCore/ChangeLog:8 > + Defer text replacement notification until after layout is done to avoid unexpected force layouts.
forced
alan
Comment 4
2017-12-13 10:09:40 PST
Created
attachment 329228
[details]
Patch
WebKit Commit Bot
Comment 5
2017-12-13 10:43:09 PST
Comment on
attachment 329228
[details]
Patch Clearing flags on attachment: 329228 Committed
r225855
: <
https://trac.webkit.org/changeset/225855
>
WebKit Commit Bot
Comment 6
2017-12-13 10:43:11 PST
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug